syntax = "proto3";

import "google/protobuf/empty.proto";

option go_package = "kvs/proto/chiave";

package chiave;

service Chiave {
  rpc GetCounter(Request) returns (GetCounterResponse) {}
  rpc GetSet(Request) returns (GetSetResponse) {}
  rpc Write(Request) returns (Response) {}
  rpc ProcessEvent(Event) returns (google.protobuf.Empty) {}
}

enum OP {
  INCREMENT = 0;
  DECREMENT = 1;
  GETCOUNTER = 2;
  ADDSET = 3;
  REMOVESET = 4;
  GETSET = 5;
}

message Response {
  Context context = 1;
}

message Request {
  string key = 1;
  int32 worker_id = 2;
  OP operation = 3;
  string arg = 4;
  Context context = 5;
}

message Context {
  DVV dvv = 1;
}

message GetCounterResponse {
  Context context = 1;
  int64 value = 2;
}

message GetSetResponse {
  Context context = 1;
  repeated string value = 2;
}

message DVV {
  map<string, int64> clock = 1;
  Dot dot = 2;
}

message Dot {
  string replica = 1;
  int64 n = 2;
}

enum DT {
  Counter = 0;
  Set = 1;
}

message Event {
  string source = 1;
  int32 dest = 2;
  string key = 3;
  DT datatype = 4;
  oneof data {
    OpCounter op_counter = 5;
    StateCounter state_counter = 6;
    DeltaCounter delta_counter = 7;
    OpSet op_set = 8;
    StateSet state_set = 9;
  }
}

message OpCounter {
  int64 update = 1;
}

message StateCounter {
  GCounter pos = 1;
  GCounter neg = 2;
}

message GCounter {
  map<string, int64> vec = 1;
  string replica = 2;
}

message DeltaCounter {
  map<string, int64> pos = 1;
  map<string, int64> neg = 2;
}

message OpSet {
  repeated SetOperation operations = 1;
}

enum SET_OP {
  ADD = 0;
  REM = 1;
}

message SetOperation {
  SET_OP op = 1;
  string element = 2;
  string tag = 3;
  repeated string remove_tags = 4;
}

message StateSet {
  map<string, Dots> add = 1;
  map<string, Dots> rem = 2;
  DVV DVV = 3;
}

message Dots {
  repeated Dot dots = 1;
}